<resources>
    <string name="app_name">GeoTracker</string>
    <string name="notificationChannel">locationChannel</string>
    <string name="wipeBtnTxt">Clear Selected History</string>
    <string name="title">Geo Tracker</string>
    <string name="steps">Steps</string>
    <string name="meters">Meters</string>
    <string name="kilometres">Kms</string>
    <string name="col1Txt">Day:</string>
    <string name="col2Txt">Week:</string>
    <string name="col3Txt">Month:</string>
    <string name="col4Txt">6 Months:</string>
    <string name="col5Txt">Year:</string>
    <string name="col6Txt">Average distance per day:</string>
    <string name="tracking">Track</string>
    <string name="history">History</string>
    <string name="settings">Config</string>
    <string name="reminders">Pings</string>
    <string name="home">Home</string>
    <string name="speedTxt">Most recent speed:</string>
    <string name="distance">Distance:</string>
    <string name="notes">Take notes here…</string>
    <string name="back">Return</string>
    <string name="save">Save</string>
    <string name="description">Enter title</string>
    <string name="latitude">Enter latitude</string>
    <string name="longitude">Enter longitude</string>
    <string name="annotationTitle">Make notes…</string>
    <string name="configTitle">App Configuration</string>
    <string name="historyTitle">Location History</string>
    <string name="pingTitle">View Location Reminders</string>
    <string name="newPingTitle">Set Location Reminders</string>
    <string name="trackerTitle">Track Distance</string>
    <string name="pingDeleteInfo">Pings: tap to delete</string>
    <string name="newPing">New Ping</string>
    <string name="annotationHint">Enter notes here…</string>
    <string name="wipeAll">Wipe all data</string>
    <string name="meter">Meters</string>
    <string name="km">Kilometers</string>
    <string name="mile">Miles</string>
    <string name="yard">Yards</string>
    <string name="perf">Rate your performance!</string>
    <string name="search">Search</string>
    <string name="searchHint">Enter a date (DD/MM/YY)</string>
    <string name="clear">Clear</string>
    <string name="numPing">Number of Pings received:</string>
    <string name="startTracking">Start Tracking</string>
    <string name="stopTracking">Stop Tracking</string>
    <string name="height">Height:</string>
    <string name="calendar">Calendar</string>
    <string name="currentStats">Current Stats</string>
    <string name="openMap">Place on map</string>
</resources>